--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <input type="number" id="annualSalary" placeholder="Annual Salary" />
       <button type="button" id="submit" class="btn btn-dark">Submit</button>
     </header>
-    <main>
+    <main id="tableMain">
       <p>Employees:</p>
       <table id="employeeEntry" class="table table-bordered">
       </table>
