--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           placeholder="Annual Salary"
         />
       </div>
-      <button type="button" id="submit" class="btn btn-dark input-button">
+      <button type="button" id="submit" class="input-button">
         Submit
       </button>
     </div>
