cleared up redundant data attribute in html, changed #button to class

--- a/index.html
+++ b/index.html
@@ -19,14 +19,24 @@
         class="input"
         placeholder="First Name"
       />
-      <input type="text" id="lastName" class="input" placeholder="Last Name" />
+      <input 
+        type="text" 
+        id="lastName" 
+        class="input" 
+        placeholder="Last Name" 
+      />
       <input
         type="number"
         id="idNumber"
         class="input-number"
         placeholder="ID Number"
       />
-      <input type="text" id="jobTitle" class="input" placeholder="Job Title" />
+      <input 
+        type="text" 
+        id="jobTitle" 
+        class="input" 
+        placeholder="Job Title" 
+      />
       <div class="salary-div">
         <span class="dollar-sign">$ </span>
         <input
